<resources>
    <string name="app_name">Sellfy Attendance</string>

    <string name="picture">Picture</string>
    <string name="help_existing_student">Select a student to take a picture:</string>
    <string name="btn_create">Create</string>
    <string name="help_new_student">Create a new Student:</string>
    <string name="student_name">Student Name</string>
    <string name="samples"># Samples</string>
    <string name="student_id">Student ID</string>
    <string name="confirm_btn">Confirm</string>
    <string name="select_class_help">help: Long press on an a existing class to enter edit mode. Short press to enter attendance check.</string>
    <string name="delete_checkbox">Delete Mode</string>
</resources>
