<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/student_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="@string/student_name"
        android:layout_margin="7dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/student_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:hint="@string/student_id"
        android:layout_marginLeft="7dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintTop_toBottomOf="@id/student_name"
        app:layout_constraintStart_toStartOf="@id/student_name"
        />


    <TextView
        android:id="@+id/num_of_samples"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="@string/samples"
        android:layout_weight="1"
        android:layout_margin="7dp"
        app:layout_constraintBaseline_toBaselineOf="@id/student_name"
        app:layout_constraintEnd_toEndOf="parent"
        />


</android.support.constraint.ConstraintLayout>